--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.14",
     "firebase": "^12.4.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
+    "rollup-plugin-visualizer": "^6.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
